SpellBookGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from SpellBookGrammar.y
-----------------------------------------------------------------------------


terminal Apparate is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Body                           (0)
	Body -> Alohomora Body                             (1)
	Body -> Expr Body                                  (2)
	Body -> Expr FiniteIncantatem                      (3)
	Expr -> Engorgio Expr Expr                         (4)
	Expr -> Reducio Expr Expr                          (5)
	Expr -> Geminio Expr Expr                          (6)
	Expr -> Diminuando Expr Expr                       (7)
	Expr -> Caterwauling Expr Expr                     (8)
	Expr -> AlarteAscendere Expr Expr                  (9)
	Expr -> Accio Expr Expr                            (10)
	Expr -> Ascendio Expr                              (11)
	Expr -> PrioriIncantatem Expr                      (12)
	Expr -> Informous Expr                             (13)
	Expr -> Ferula Expr                                (14)
	Expr -> Depulso Expr Expr                          (15)
	Expr -> Flipendo Expr Expr                         (16)
	Expr -> Expelliarmus Expr Expr                     (17)
	Expr -> Ventus Expr                                (18)
	Expr -> Obliviate Expr                             (19)
	Expr -> Epoximise Expr Expr                        (20)
	Expr -> EverteStatum Expr                          (21)
	Expr -> Confringo Expr Expr Expr                   (22)
	Expr -> Entomorphis Expr Expr                      (23)
	Expr -> CarpeRetractum Expr Expr                   (24)
	Expr -> Defodio Expr Expr                          (25)
	Expr -> Deprimo Expr Expr                          (26)
	Expr -> Episkey Expr Expr                          (27)
	Expr -> Impedimenta Expr Expr                      (28)
	Expr -> Crucio Expr                                (29)
	Expr -> '(' Expr ')'                               (30)
	Expr -> int                                        (31)
	Expr -> lumos                                      (32)
	Expr -> nox                                        (33)
	Expr -> horcrux                                    (34)
	Expr -> Confundo Expr Incendio Body Aguamenti Body   (35)
	Expr -> Confundo Expr Incendio Body                (36)
	Expr -> WingardiumLeviosa Expr Imperio Body        (37)
	Expr -> Appare Fidelius horcrux Expr Vestigium Body   (38)
	Expr -> Fidelius horcrux Expr                      (39)
	Expr -> Flagrate Expr                              (40)
	Expr -> Legilimens Expr                            (41)
	Expr -> '[' Arr ']'                                (42)
	Arr ->                                             (43)
	Arr -> int                                         (44)
	Arr -> Arr ',' int                                 (45)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Engorgio       { TokenPlus _ }
	Reducio        { TokenMinus _ }
	Geminio        { TokenTimes _ }
	Diminuando     { TokenDiv _ }
	Caterwauling   { TokenMod _ }
	Ferula         { TokenSum _ }
	Accio          { TokenGet _ }
	Ascendio       { TokenHead _ }
	PrioriIncantatem{ TokenLast _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	Depulso        { TokenAddEnd _ }
	Flipendo       { TokenAddFront _ }
	Expelliarmus   { TokenRemove _ }
	Ventus         { TokenInit _ }
	Obliviate      { TokenTail _ }
	Fidelius       { TokenEq _ }
	Appare         { TokenLet _ }
	Vestigium      { TokenIn _ }
	Confundo       { TokenIf _ }
	Incendio       { TokenThen _ }
	Aguamenti      { TokenElse _ }
	Epoximise      { TokenConcat _ }
	Alohomora      { TokenBegin _ }
	Legilimens     { TokenRead _ }
	Flagrate       { TokenWrite _ }
	EverteStatum   { TokenRevert _ }
	WingardiumLeviosa{ TokenWhile _ }
	Imperio        { TokenDo _ }
	FiniteIncantatem{ TokenEnd _ }
	AlarteAscendere{ TokenPower  _ }
	Confringo      { TokenGetXY _ }
	Entomorphis    { TokenLess _ }
	CarpeRetractum { TokenLessEq _ }
	Defodio        { TokenGreater _ }
	Deprimo        { TokenGreaterEq _ }
	Episkey        { TokenEqEq _ }
	Crucio         { TokenNot _ }
	Impedimenta    { TokenNotEq _ }
	lumos          { TokenTrue _ }
	nox            { TokenFalse _ }
	Apparate       { TokenWriteFile _ }
	horcrux        { TokenVar _ $$ }
	int            { TokenInt _  $$ }
	','            { TokenComma _ }
	'['            { TokenArrBeginning _ }
	']'            { TokenArrEnd _ }
	Informous      { TokenLength _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Body            rules 1, 2, 3
	Expr            rules 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42
	Arr             rules 43, 44, 45

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Alohomora      shift, and enter state 2
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Body           goto state 3
	Expr           goto state 4

State 1


	Alohomora      shift, and enter state 2


State 2

	Body -> Alohomora . Body                            (rule 1)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Alohomora      shift, and enter state 2
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Body           goto state 80
	Expr           goto state 4

State 3

	%start_parseCalc -> Body .                          (rule 0)

	%eof           accept


State 4

	Body -> Expr . Body                                 (rule 2)
	Body -> Expr . FiniteIncantatem                     (rule 3)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Alohomora      shift, and enter state 2
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	FiniteIncantatemshift, and enter state 79
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Body           goto state 78
	Expr           goto state 4

State 5

	Expr -> Engorgio . Expr Expr                        (rule 4)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 77

State 6

	Expr -> Reducio . Expr Expr                         (rule 5)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 76

State 7

	Expr -> Geminio . Expr Expr                         (rule 6)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 75

State 8

	Expr -> Diminuando . Expr Expr                      (rule 7)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 74

State 9

	Expr -> Caterwauling . Expr Expr                    (rule 8)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 73

State 10

	Expr -> Ferula . Expr                               (rule 14)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 72

State 11

	Expr -> Accio . Expr Expr                           (rule 10)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 71

State 12

	Expr -> Ascendio . Expr                             (rule 11)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 70

State 13

	Expr -> PrioriIncantatem . Expr                     (rule 12)

	Engorgio       shift, and enter state 5
	Reducio        shift, and enter state 6
	Geminio        shift, and enter state 7
	Diminuando     shift, and enter state 8
	Caterwauling   shift, and enter state 9
	Ferula         shift, and enter state 10
	Accio          shift, and enter state 11
	Ascendio       shift, and enter state 12
	PrioriIncantatemshift, and enter state 13
	'('            shift, and enter state 14
	Depulso        shift, and enter state 15
	Flipendo       shift, and enter state 16
	Expelliarmus   shift, and enter state 17
	Ventus         shift, and enter state 18
	Obliviate      shift, and enter state 19
	Fidelius       shift, and enter state 20
	Appare         shift, and enter state 21
	Confundo       shift, and enter state 22
	Epoximise      shift, and enter state 23
	Legilimens     shift, and enter state 24
	Flagrate       shift, and enter state 25
	EverteStatum   shift, and enter state 26
	WingardiumLeviosashift, and enter state 27
	AlarteAscendereshift, and enter state 28
	Confringo      shift, and enter state 29
	Entomorphis    shift, and enter state 30
	CarpeRetractum shift, and enter state 31
	Defodio        shift, and enter state 32
	Deprimo        shift, and enter state 33
	Episkey        shift, and enter state 34
	Crucio         shift, and enter state 35
	Impedimenta    shift, and enter state 36
	lumos          shift, and enter state 37
	nox            shift, and enter state 38
	horcrux        shift, and enter state 39
	int            shift, and enter state 40
	'['            shift, and enter state 41
	Informous      shift, and enter state 42

	Expr           goto state 69

State 14

	Expr -> '(' . Expr ')'                              (rule 30)
